dependencie glfw added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ ENABLE_LANGUAGE(CXX)
 
 ## FIND LIBRARY DEPENDENCY
 
+FIND_PACKAGE(GLFW REQUIRED glfw3)
 
 ##
 
@@ -123,7 +124,7 @@ CONFIGURE_COMPILATION()
 
 ## LIBRARY SETTINGS
 
-
+TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${GLFW_LIBRARIES})
 
 ## END LIBRARY SETTINGS
 
