add first scene, still need to add a glfw_context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,13 +29,13 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/)
 
 ## PROJECT VERSION
 
-SET(PROJECT_VERSION_MAJOR 1)
-SET(PROJECT_VERSION_MINOR 0)
-SET(PROJECT_VERSION_PATCH 0)
-SET(PROJECT_VERSION_EXTRA 0)
+SET(DEMO_PROJECT_VERSION_MAJOR 1)
+SET(DEMO_PROJECT_VERSION_MINOR 1)
+SET(DEMO_PROJECT_VERSION_PATCH 2)
+SET(DEMO_PROJECT_VERSION_EXTRA 0)
 
-SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
-SET(PROJECT_VERSION_FULL ${PROJECT_VERSION}.${PROJECT_VERSION_EXTRA})
+SET(DEMO_PROJECT_VERSION ${DEMO_PROJECT_VERSION_MAJOR}.${DEMO_PROJECT_VERSION_MINOR}.${DEMO_PROJECT_VERSION_PATCH})
+SET(DEMO_PROJECT_VERSION_FULL ${DEMO_PROJECT_VERSION}.${DEMO_PROJECT_VERSION_EXTRA})
 
 ## END PROJECT VERSION
 
@@ -66,6 +66,7 @@ ENABLE_LANGUAGE(CXX)
 ## FIND LIBRARY DEPENDENCY
 
 FIND_PACKAGE(GLFW REQUIRED glfw3)
+FIND_PACKAGE(Engine REQUIRED)
 
 ##
 
@@ -125,6 +126,7 @@ CONFIGURE_COMPILATION()
 ## LIBRARY SETTINGS
 
 TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${GLFW_LIBRARIES})
+TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${ENGINE_LIBRARY})
 
 ## END LIBRARY SETTINGS
 
